--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bundle/nerdtree"]
 	path = bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule "misc/vim-pathogen"]
+	path = misc/vim-pathogen
+	url = https://github.com/tpope/vim-pathogen.git
