--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "misc/vim-pathogen"]
 	path = misc/vim-pathogen
 	url = https://github.com/tpope/vim-pathogen.git
+[submodule "bundle/ctrlp"]
+	path = bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
